syntax = "proto3";

option go_package = "v1";

import "google/api/annotations.proto";

package v1;

message Scanner {
    string name                 = 1;
    string endpoint             = 2;
    map<string, string> config  = 3;
}

message GetScannersRequest {
    string name = 1;
}

message GetScannersResponse {
    repeated Scanner scanners = 1;
}

service ScannerService {

    rpc GetScanners(GetScannersRequest) returns (GetScannersResponse) {
        option (google.api.http) = {
            get: "/v1/scanners"
        };
    }

    rpc PostScanner(Scanner) returns (Scanner) {
        option (google.api.http) = {
            post: "/v1/scanners"
            body: "*"
        };
    }

}
